add weather icon on result page

--- a/result.html
+++ b/result.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img class="icon" src="images/4571485.png" alt="">
+    <img class="icon" src="<%=image%>" alt="">
 
     <h2>It is
         <%= description %> in
